INCLUDE_DIRECTORIES(
  ${DEVSTONE_BINARY_DIR}/src
  ${DEVSTONE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(devstone main.cpp)
SET_TARGET_PROPERTIES(devstone PROPERTIES ${DEVSTONE_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(devstone
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_TIMER_LIBRARY})

INSTALL(TARGETS devstone DESTINATION bin)