INCLUDE_DIRECTORIES(
  ${DEVSBENCH_BINARY_DIR}/src
  ${DEVSBENCH_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(devsbench main.cpp)
SET_TARGET_PROPERTIES(devsbench PROPERTIES ${DEVSBENCH_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(devsbench
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_TIMER_LIBRARY}
  devsbenchdevstone devsbenchtree)

INSTALL(TARGETS devsbench DESTINATION bin)