INCLUDE_DIRECTORIES(
  ${DEVSBENCH_BINARY_DIR}/src
  ${DEVSBENCH_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

SET(DEVSBENCH_HPP Node.hpp TreeNode.hpp Merge.hpp Merge.cpp)

INSTALL(FILES ${DEVSBENCH_HPP} DESTINATION ${DEVSBENCH_INCLUDE_DIRS})
