INCLUDE_DIRECTORIES(
  ${DEVSTONE_BINARY_DIR}/src
  ${DEVSTONE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

SET(DEVSTONE_HPP Generator.hpp Node.hpp TreeNode.hpp)
SET(DEVSTONE_CPP Generator.cpp)

ADD_LIBRARY(devstonedevstone SHARED ${DEVSTONE_CPP};${DEVSTONE_HPP})

INSTALL(TARGETS devstonedevstone
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${DEVSTONE_HPP} DESTINATION ${DEVSTONE_INCLUDE_DIRS})