INCLUDE_DIRECTORIES(
  ${DEVSBENCH_BINARY_DIR}/src
  ${DEVSBENCH_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

SET(DEVSTONE_HPP Generator.hpp)
SET(DEVSTONE_CPP Generator.cpp)

ADD_LIBRARY(devsbenchdevstone SHARED ${DEVSTONE_CPP};${DEVSTONE_HPP})

INSTALL(TARGETS devsbenchdevstone
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${DEVSTONE_HPP} DESTINATION ${DEVSBENCH_INCLUDE_DIRS})