INCLUDE_DIRECTORIES(
  ${DEVSBENCH_BINARY_DIR}/src
  ${DEVSBENCH_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

SET(TREE_HPP Generator.hpp)
SET(TREE_CPP Generator.cpp)

ADD_LIBRARY(devsbenchtree SHARED ${TREE_CPP};${TREE_HPP})

INSTALL(TARGETS devsbenchtree
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${DEVSTREE_HPP} DESTINATION ${DEVSBENCH_INCLUDE_DIRS})